tests/error/type_match/typename_base_type_mismatched_type.bz
function test1(T: [typename, int32]);

function test()
{
	test1([int32, int64]);
}
